# GSOC

./: README.md
backend/: resumini_postman_collection.json
backend/app/: main.py
backend/app/services/: agent.py  available_tools.py
backend/tests/: check_adk_model.py  check_genai.py  check_real_genai.py  copy_lib_files.py  debug_agent.py  debug_agent_v2.py  debug_file.py  debug_model.py  debug_output.txt  debug_safe.py  test_run_live.py  verify_fix.py  verify_fix_v2.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/components/ui/: Button.tsx  GlassCard.tsx
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Home.tsx
frontend/src/services/: api.ts
gsoc/: .gitignore  README.md  pyproject.toml
gsoc/agent_service/: agent.py  available_tools.py
gsoc/app/: main.py  models.py
gsoc/app/services/: available_tools.py
gsoc/tests/: test_api.py
